Working on displaying something when user is offline

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,9 @@
     <script>
       if('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('./serviceworker')
-            .then((reg) => console.log('Success'));
+          navigator.serviceWorker.register('./serviceworker.js')
+            .then((reg) => console.log('Success', reg.scope))
+            .catch((err) => console.log(err));
         })
       }
     </script>
